--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
 </head>
 <body>
   <div id="main-content">
-    <h1>Task Lister Lite™️</h1>
-
+    <h1>Task Lister Lite:tm:</h1>
     <form id="create-task-form" action="" method="POST">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <select id="color-selector">
+        <option value="green">Green</option>
+        <option value="yellow">Yellow</option>
+        <option value="red">Red</option>
+      </select>
       <input type="submit" value="Create New Task">
     </form>
-
     <div id="list">
       <h2>My Todos:</h2>
       <ul id="tasks">
       </ul>
     </div>
-
     <script src="./src/index.js"></script>
   </div>
-
 </body>
 </html>
