set up prioritized colors

--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
     </form>
     <div id="list">
       <h2>My Todos:</h2>
-      <ul id="tasks">
+      <ul id="red-tasks">
+        <h3>high priority</h3>
+      </ul>
+      <ul id="yellow-tasks">
+        <h3>mid priority</h3>
+      </ul>
+      <ul id="green-tasks">
+        <h3>low priority</h3>
       </ul>
     </div>
     <script src="./src/index.js"></script>
